Report: Make Mihai's right arm gray
It's a metallic prosthetic

--- a/report/initial_report.tex
+++ b/report/initial_report.tex
@@ -83,9 +83,9 @@
 
     \label{sec:sprites}
     \begin{figure}[h]
-        \includegraphics[scale=6]{player-characters}
+        \includegraphics[scale=2]{player-characters}
         \centering
-        \caption{Personaje jucabile, de la stânga la dreapta: Mircea, Eduard, Mihai}
+        \caption{Protagoniștii, de la stânga la dreapta: Mircea, Eduard, Mihai}
     \end{figure}
 
     Jucătorul poate alege între trei personaje: \emph{Mircea, The Wizard of Brăila},
@@ -114,7 +114,8 @@
         jucător într-o direcție aleasă aleator.
         \item \emph{Pistol Carpați} --- un pistol, viteza sa de atac este crescută comparativ cu
         folosirea unei vrăji.
-        \item \emph{Baltagul Vitoriei} --- un topor gigant, care atacă inamici în jurul jucătorului.
+        \item \emph{Baltagul Vitoriei} --- un topor gigant, care pleacă în spirală de la jucător.
+        spre exterior.
         \item \emph{Morning Star} --- o bila metalică cu țepi atașată cu un lanț de un mâner, se
         rotește în jurul jucătorului.
         \item \emph{Holy Lamp} --- crează o arie conică în fața jucătorului care are bonus de putere
