Report: Add note about level difficulty

--- a/report/initial_report.tex
+++ b/report/initial_report.tex
@@ -218,8 +218,11 @@
         singurul inamic de tip boss, dar lupta cu el va fi în două etape.
     \end{itemize}
 
-    în toate aceste nivele vor exista inamici de tip mini-boss care sunt versiuni mai mari și mai
+    În toate aceste nivele vor exista inamici de tip mini-boss care sunt versiuni mai mari și mai
     puternice a celor normali.
+
+    Dificultatea va crește în fiecare nivel prin incluziunea inamicilor care apar după jumătatea
+    timpului în nivelul anterior și prin creșterea puterii ataculurilor inamicilor.
 
     \section{Interfața grafică}
 
