report: Remove stray '|'

--- a/report/report.tex
+++ b/report/report.tex
@@ -191,7 +191,7 @@
         lui Cristian. Se pare că doliul l-a dus pe Cristian să facă acte de neiertat propriei familii.
         \item \emph{Cezar, the Tătărașiborn Guardian} --- unul dintre cei mai buni discipoli ai lui
         Cristian, născut în Tătărași.
-        \item \emph{Denis, the Cosmicbane|} --- unul dintre cei mai buni discipoli ai lui Cristian, și
+        \item \emph{Denis, the Cosmicbane} --- unul dintre cei mai buni discipoli ai lui Cristian, și
         mag cu puteri spațiale, specialitățile lui sunt teleportarea și invizibilitatea.
         \item \emph{Cristian, the Necromancer of Neamț} --- caută să își răzbune fratele. Jucătorul va
         lupta cu el în două faze.
