report: Add more gameplay notes

--- a/report/report.tex
+++ b/report/report.tex
@@ -81,6 +81,13 @@
     inamicii, ci din abilitatea sa de a se feri de ei, sau atacurile lor, ceea ce va deveni dificil
     cu cât jucătorul se află mai mult într-un nivel.
 
+    În fiecare nivel există obstacole prin care jucătorul nu poate trece, în plus jucătorul nu
+    poate ieși din interior nivelului în afara sa.
+
+    Jucătorul va pierde un nivel în momentul în care viața acestuia a atins valoarea 0 și va
+    câștiga o data ce boss-ul nivelului este învins. Câștigarea nivelului va permite accesul la
+    următorul nivel, și în anumite cazuri debloca personaje noi.
+
     Sistemul de save/load al jocului este automat, și nu necesită o interacțiune explicită a
     jucătorului.
 
